fix z-index header image

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -36,6 +36,7 @@ h3 {
   margin: 0;
 
   font: normal 72px/1.2em Neucha, sans-serif;
+  /* z-index: 20; */
 }
 
 h2 {
@@ -80,7 +81,6 @@ body {
   width: 100%;
   height: 100%;
 
-  /* background-color: var(--brown); */
   background-image: url("../images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -322,6 +322,8 @@ body {
 
 .bg-light {
   background-color: var(--light);
+
+  z-index: -2;
 }
 
 .mb-0 {
